hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tshape.php.exp
File "tshape.php", line 4, characters 12-29:
Invalid return type (Typing[4110])
File "tshape.php", line 4, characters 36-52:
Expected shape('a' => int)
File "tshape.php", line 4, characters 12-29:
But got dynamic
